--- a/shared/latex/about/tour2table.tex
+++ b/shared/latex/about/tour2table.tex
@@ -3,7 +3,7 @@
   \begin{itemize}
     \item Votre nom
     \item Votre métier
-    \item Votre société client si appliquable
+    \item Votre société client si applicable
     \item Vos compétences dans les domaines liés à cette formation
     \item Vos objectifs et vos attentes vis-à-vis de cette formation
   \end{itemize}
