Correctif nn cnn rnn eni/ml-5J

--- a/shared/latex/nn/cnn/model.tex
+++ b/shared/latex/nn/cnn/model.tex
@@ -39,7 +39,7 @@
 \begin{frame}{Aggrégation}
   \textit{Pooling} en anglais. L'autre mécanisme pour réduire les dimensions spatiales~:
 
-  \V{["img/d2l/pooling", "tw", 0.8] | image}
+  \V{["tikz/neural-networks/cnn/maxpool", "tw", 0.8] | image}
 
   Une aggrégation $n \times m$ est souvent utilisée avec des pas $(n, m)$.
 \end{frame}
