--- a/shared/latex/nn/rnn/rnn.tex
+++ b/shared/latex/nn/rnn/rnn.tex
@@ -9,16 +9,14 @@
 \end{frame}
 
 \begin{frame}{Modèle}
-  \V{["tikz/neural-networks/rnn/simple-unfold", "th", 0.3] | image}
-  $h_{t}=\sigma_{h}(Ux_{t}+Vh_{t-1}+b_{h})$ \\
-  $o_{t}=\sigma_{o}(Wh_{t}+b_{o})$ \\
-  \begin{itemize}
-  \item $x_{t}$ : vecteur d'entrée
-  \item $h_t$ : vecteur de la couche cachée
-  \item $o_{t}$ : vecteur de sortie
-  \item $U$, $V$, $W$, $b_h$ et $b_o$ : matrices et vecteurs (paramètres)
-  \item $\sigma_{h}$ et $\sigma_o$ : fonctions d'activation (tanh)
-  \end{itemize}
+  \V{["tikz/neural-networks/rnn/simple-unfold", "th", 0.25] | image}
+  \begin{tabular}{ ll } 
+    $x_{t}$ : entrée  & $h_{t}=\sigma_{h}(Ux_{t}+Vh_{t-1}+b_{h})$ \\
+    $h_t$ : couche cachée  & $o_{t}=\sigma_{o}(Wh_{t}+b_{o})$ \\
+    $o_{t}$ : sortie \\
+    $U$, $V$, $W$, $b_h$ et $b_o$ : paramètres  \\
+    $\sigma_{h}$ et $\sigma_o$ : activations tanh  \\
+  \end{tabular}
 \end{frame}
 
 \begin{frame}{Prédiction d'une sortie}
