--- a/shared/latex/nn/intro.tex
+++ b/shared/latex/nn/intro.tex
@@ -182,7 +182,7 @@
     \begin{align*}
       n_1 & = \ReLU(-5x - 7.7) & n_4 & = \ReLU(1.2x - 0.2) \\
       n_2 & = \ReLU(-1.2x - 1.3) & n_5 & = \ReLU(2x - 1.1) \\
-      n_3 & = \ReLU(1.2x - 1) & n_6 & = \ReLU(5x - 5) \\
+      n_3 & = \ReLU(1.2x + 1) & n_6 & = \ReLU(5x - 5) \\
     \end{align*}
   }
 \end{frame}
