Tweak ENI 1j slightly
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/eni/ml-vue-d-ensemble-1J/latex/about/description.tex
+++ b/eni/ml-vue-d-ensemble-1J/latex/about/description.tex
@@ -1,23 +1,20 @@
 \begin{frame}{Description}
-  Cette formation présente les \textbf{fondamentaux du machine learning} ainsi que les principales \textbf{techniques utilisées dans l’industrie}.
+  Séminaire de présentation des enjeux et tendances de l'Intelligence Artificielle..
 \end{frame}
 
-\begin{frame}{Profil des stagiaires}
-  Toute personne intéressée par l'Intelligence Artificielle souhaitant obtenir une vision claire de ses capacités et de son impact sur les systèmes existants.
+\begin{frame}{Public}
+  Tout public.
 \end{frame}
 
-\begin{frame}{Connaissances préalables}
-  Bonne culture en informatique
-
-  Algèbre si vous voulez comprendre les formules mais ce n'est pas rédhibitoire
+\begin{frame}{Pré-requis}
+  Aucun.
 \end{frame}
 
-\begin{frame}{Objectifs à atteindre}
+\begin{frame}{Objectifs}
   \begin{itemize}
-  \item Comprendre les possibilités offertes par le machine learning (et ses contraintes)
-  \item Cerner les acteurs du domaine
-  \item Apercevoir les tendances en cours et à venir
-  \item Savoir intégrer le machine learning dans une entreprise
+    \item Identifier les capacités réelles des systèmes d'Intelligence Artificielle actuels
+    \item Cerner les acteurs du marché
+    \item Décrire les transformations engendrées par l'intégration d'Intelligence Artificielle à des systèmes métiers
   \end{itemize}
 \end{frame}
 
