--- a/shared/latex/actors/gafa.tex
+++ b/shared/latex/actors/gafa.tex
@@ -1,6 +1,6 @@
-\begin{frame}
-  \frametitle{La recherche privée}
-  Les GAFA :
+\begin{frame}{La recherche privée}
+  Les GAFA~:
+
   \begin{itemize}
   \item Google (+Deepmind)
   \item Amazon (AWS)
@@ -11,39 +11,35 @@
   \item Baidu
   \item Elon Musk (OpenAI)
   \end{itemize}
+
   Beaucoup de développement open-source de la part de Google, Facebook et Baidu
 \end{frame}
 
-\begin{frame}
-  \frametitle{La recherche académique}
+\begin{frame}{La recherche académique}
   \V{["img/citation-nips-2005-2016", "th", 0.85] | image}
 \end{frame}
 
-\begin{frame}
-  \frametitle{La recherche académique privatisée}
+\begin{frame}{La recherche académique privatisée}
   \V{["img/citation-nips-2005-2016-team", "th", 0.85] | image}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Les acteurs business du machine learning}
-  Course à l'acquisition :
-  \begin{itemize}
-    \item Google (Cleversense (2012), Deepmind, Api.ai,...)
-    \item Apple (Siri (2010), Vocal IQ, RealFace, ...) 
-    \item Facebook (Face.com (2012), wit.ai, ...)
-    \item Microsoft (Netbreeze (2013), Swiftkey, Maluuba)
-    \end{itemize}
+\begin{frame}{Les acteurs business du machine learning}
+  Course à l'acquisition~:
+  \begin{description}
+    \item[Google] Cleversense (2012), Deepmind, Api.ai,...
+    \item[Apple] Siri (2010), Vocal IQ, RealFace, ...)
+    \item[Facebook] Face.com (2012), wit.ai, ...
+    \item[Microsoft] Netbreeze (2013), Swiftkey, Maluuba
+    \end{description}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Les acteurs business}
+\begin{frame}{Les acteurs business}
   IBM, Watson et Jeopardy en 2010
   \V{["img/jeopardy-watson", "tw", 0.6] | image}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Les acteurs business}
-  L'api IBM Watson :
+\begin{frame}{Les acteurs business --- IBM Watson}
+  Survol de l'API~:
   \begin{itemize}
     \item Data : Watson Knowledge Catalog, Watson Discovery
     \item Traitement de la voix : Tone Analyzer, Speech to Text
@@ -52,9 +48,8 @@
   \end{itemize}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Les acteurs business}
-  APIs Watson de traitement du langage : \\
+\begin{frame}{Les acteurs business --- IBM Watson}
+  Focus sur l'API de traitement de texte~:
   \begin{minipage}[c]{0.49\linewidth}
     \begin{itemize}
     \item Scripting
@@ -72,9 +67,7 @@
   \end{minipage}\hfill
 \end{frame}
 
-\begin{frame}
-  \frametitle{Les acteurs business}
-  Microsoft Azure : 
+\begin{frame}{Les acteurs business --- Microsoft Azure}
   \begin{itemize}
     \item Voix : Reconnaissance vocale, Synthèse vocale, Traduction vocale, Reconnaissance de l'orateur
     \item Langage : Analyse de texte, Language Understanding, Lecteur immersif, QnA maker, Traducteur
@@ -83,9 +76,7 @@
   \end{itemize}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Les acteurs business}
-  Amazon AI :
+\begin{frame}{Les acteurs business --- Amazon AI}
   \begin{itemize}
     \item Data : AWS, Amazon Mechanical Turk
     \item Traitement de la voix : Amazon Transcribe, Amazon Polly, 
@@ -96,9 +87,7 @@
   \end{itemize}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Les acteurs business}
-  Facebook
+\begin{frame}{Les acteurs business --- Facebook}
   \begin{itemize}
   \item Bot framework
   \item DeepFace
@@ -109,9 +98,7 @@
   \end{itemize}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Les acteurs business}
-  Google
+\begin{frame}{Les acteurs business --- Google}
   \begin{itemize}
   \item Traduction
   \item Traitement d'image/Vidéo
@@ -126,9 +113,7 @@
   \end{itemize}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Les acteurs business}
-  Baidu
+\begin{frame}{Les acteurs business --- Baidu}
   \begin{itemize}
   \item Traduction
   \item Traitement d'image/Vidéo
@@ -143,9 +128,7 @@
   \end{itemize}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Les acteurs business}
-  Apple
+\begin{frame}{Les acteurs business --- Apple}
   \begin{itemize}
   \item ???
   \item Première publication scientifique (publique) en 2016
