--- a/shared/latex/ml/intro.tex
+++ b/shared/latex/ml/intro.tex
@@ -18,15 +18,15 @@
   \V{["img/ml-craftmanship", "tw", 0.8] | image}
 \end{frame}
 
-\begin{frame}{Matière première : les données}
-  On cherche une fonction qui à :
+\begin{frame}{Matière première~: les données}
+  On cherche une fonction qui a~:
   \begin{itemize}
     \item en entrée : N données en dimension D
     \item en sortie : N sorties en dimension K
   \end{itemize}
 \end{frame}
 
-\begin{frame}{Matière première : les données}
+\begin{frame}{Matière première~: les données}
   Chaque dimension du problème est représentée par une variable : 
   \V{["tikz/variables", "tw", 0.8] | image}
 \end{frame}
@@ -129,7 +129,7 @@
   \item à quelles données allez-vous appliquer le machine learning ? À
     quels besoins ?
   \item aurez-vous besoin de modèles interprétables ou simplement très
-    performant en prédiction ?
+    performants en prédiction ?
   \item quelles sont vos contraintes ?
   \end{itemize}
 \end{frame}
