--- a/shared/latex/rl/intro.tex
+++ b/shared/latex/rl/intro.tex
@@ -4,7 +4,7 @@
   \newline
   $S_t$ est l'état de l'environnement,
   \newline
-  $A_t$ l'action effectué par l'agent et
+  $A_t$ l'action effectuée par l'agent et
   \newline
   $R_t$ la récompense de l'environnement à l'agent (conséquence de $A_t$)
 \end{frame}
