--- a/shared/latex/tools/environment.tex
+++ b/shared/latex/tools/environment.tex
@@ -2,7 +2,7 @@
   Contrôler son environnement logiciel pour~:
   \begin{itemize}[<+->]
     \item Rendre son environnement de développement reproductible
-    \item Contrôler les dépendences pour la prod
+    \item Contrôler les dépendances pour la prod
     \item Déployer son environnement facilement sur différents clouds
   \end{itemize}
 \end{frame}
@@ -20,8 +20,8 @@
 \begin{frame}{Solutions basées sur \texttt{virtualenv}}
   \begin{description}[<+->]
     \item[pip + setup.py] Définition traditionnelle d'une librarie Python
-    \item[pip + requirements.txt] Liste de dépendences
-    \item[pip + pip-compile] Lister les dépendences puis les geler pour la stabilité
+    \item[pip + requirements.txt] Liste de dépendances
+    \item[pip + pip-compile] Lister les dépendances puis les geler pour la stabilité
     \item[Pipenv] Définition moderne d'une \textbf{application} Python (pas librairie)
     \item[poetry] Définition moderne d'application ou librairie
   \end{description}
