--- a/shared/latex/about/horaires-3j-orsys.tex
+++ b/shared/latex/about/horaires-3j-orsys.tex
@@ -1,6 +1,6 @@
 \begin{frame}{Emploi du temps}
   \begin{itemize}
   \item 3 jours de 9h à 12h30 et de 14h à 17h30
-  \item Le dernier jour, à 17h00 on fini de remplir les documents administratifs.
+  \item Le dernier jour, à 17h00 on finit de remplir les documents administratifs.
   \end{itemize}
 \end{frame}
