--- a/shared/latex/ai/history.tex
+++ b/shared/latex/ai/history.tex
@@ -1,78 +1,65 @@
-\begin{frame}
-  \frametitle{Du mythe à aujourd'hui}
+\begin{frame}{Du mythe à aujourd'hui}
   \textbf{XVIème} : Le mythe du Golem
   \V{["img/mythe-du-golem", "tw", 1] | image}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Du mythe à aujourd'hui}
+\begin{frame}{Du mythe à aujourd'hui}
   \textbf{1913} : Chaînes de Markov
   \V{["img/markov", "th", 0.8] | image}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Du mythe à aujourd'hui}
+\begin{frame}{Du mythe à aujourd'hui}
   \textbf{1950} : Alan Turing
   \V{["img/alan-turing", "th", 0.6] | image}
   précurseur de l'informatique, test de Turing
 \end{frame}
 
-\begin{frame}
-  \frametitle{Du mythe à aujourd'hui}
+\begin{frame}{Du mythe à aujourd'hui}
   \textbf{1957} : Le Perceptron de Rosenblatt
   \V{["img/perceptron", "th", 0.6] | image}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Du mythe à aujourd'hui}
+\begin{frame}{Du mythe à aujourd'hui}
   \textbf{1972} :  TF-IDF
   \V{["img/tf-idf", "tw", 1] | image}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Du mythe à aujourd'hui}
+\begin{frame}{Du mythe à aujourd'hui}
   \textbf{1986} : Rétropopagation du gradient de l'erreur (popularisation)
   \V{["img/backpropagation", "th", 0.6] | image}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Du mythe à aujourd'hui}
-  \textbf{1990} : \textbf{Lenet} de Lecun : premier résau de convolution (\textbf{CNN})
+\begin{frame}{Du mythe à aujourd'hui}
+  \textbf{1990} : \textbf{Lenet} de Lecun : premier réseau de convolution (\textbf{CNN})
   \V{["img/cnn-schema", "tw", 1] | image}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Du mythe à aujourd'hui}
+\begin{frame}{Du mythe à aujourd'hui}
   \textbf{1995} : Machine à vecteurs support de Vapnik (\textbf{SVM})
   \V{["img/svm-schema-nzmog", "th", 0.6] | image}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Du mythe à aujourd'hui}
+\begin{frame}{Du mythe à aujourd'hui}
   \textbf{1997} : Deep Blue bat Kasparov
   \V{["img/deepblue-kasparov", "tw", 0.8] | image}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Du mythe à aujourd'hui}
+\begin{frame}{Du mythe à aujourd'hui}
   \textbf{2011} : IBM-Watson
   \V{["img/jeopardy-watson", "tw", 0.6] | image}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Du mythe à aujourd'hui}
+\begin{frame}{Du mythe à aujourd'hui}
   \textbf{2012} : Le ``neurone du chat'' dans un \textbf{CNN}
   \V{["img/googlebrain", "tw", 0.6] | image}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Du mythe à aujourd'hui}
+\begin{frame}{Du mythe à aujourd'hui}
   \textbf{2016} : AlphaGo vs Lee Sedol
   \V{["img/alphago-sedol", "tw", 0.6] | image}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Du mythe à aujourd'hui}
+\begin{frame}{Du mythe à aujourd'hui}
   \textbf{2019} : Pluribus vs Pro (Chris Ferguson, Darren Elias,...)
   \V{["img/poker-bots", "tw", 0.6] | image}
 \end{frame}
