Tweak AI history a bit
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/ai/history.tex
+++ b/shared/latex/ai/history.tex
@@ -1,66 +1,58 @@
-\begin{frame}{Du mythe à aujourd'hui}
-  \textbf{XVIème} : Le mythe du Golem
+\begin{frame}{XVI\ieme{} --- Mythe du Golem}
   \V{["img/mythe-du-golem", "tw", 1] | image}
 \end{frame}
 
-\begin{frame}{Du mythe à aujourd'hui}
+\begin{frame}{Début du XX\ieme{} siècle --- Chaînes de Markov}
   \textbf{1913} : Chaînes de Markov
-  \V{["img/markov", "th", 0.8] | image}
+  \V{["tikz/markov/simple", "th", 0.8] | image}
 \end{frame}
 
-\begin{frame}{Du mythe à aujourd'hui}
-  \textbf{1950} : Alan Turing
+\begin{frame}{1912--1954 --- Alan Turing}
+  Précurseur de l'informatique et de l'intelligence artificielle, test de Turing.
+
   \V{["img/alan-turing", "th", 0.6] | image}
-  précurseur de l'informatique, test de Turing
 \end{frame}
 
-\begin{frame}{Du mythe à aujourd'hui}
-  \textbf{1957} : Le Perceptron de Rosenblatt
-  \V{["img/perceptron", "th", 0.6] | image}
+\begin{frame}{1957 --- Perceptron de Rosenblatt}
+  \V{["img/perceptron", "tw", 1] | image}
 \end{frame}
 
-\begin{frame}{Du mythe à aujourd'hui}
-  \textbf{1972} :  TF-IDF
+\begin{frame}{1972 --- TF-IDF}
   \V{["img/tf-idf", "tw", 1] | image}
 \end{frame}
 
-\begin{frame}{Du mythe à aujourd'hui}
-  \textbf{1986} : Rétropopagation du gradient de l'erreur (popularisation)
-  \V{["img/backpropagation", "th", 0.6] | image}
+\begin{frame}{1986 --- Rétropropagation du gradient}
+  Popularisation pour les réseaux de neurones.
+
+  \V{["img/backpropagation", "tw", 1] | image}
 \end{frame}
 
-\begin{frame}{Du mythe à aujourd'hui}
-  \textbf{1990} : \textbf{Lenet} de Lecun : premier réseau de convolution (\textbf{CNN})
+\begin{frame}{1990 --- Premier réseau neuronal convolutif (CNN)}
+  LeNet par Yann LeCun~:
   \V{["img/cnn-schema", "tw", 1] | image}
 \end{frame}
 
-\begin{frame}{Du mythe à aujourd'hui}
-  \textbf{1995} : Machine à vecteurs support de Vapnik (\textbf{SVM})
+\begin{frame}{1995 --- Machine à vecteurs support de Vapnik (SVM)}
   \V{["img/svm-schema-nzmog", "th", 0.6] | image}
 \end{frame}
 
-\begin{frame}{Du mythe à aujourd'hui}
-  \textbf{1997} : Deep Blue bat Kasparov
+\begin{frame}{1997 --- Deep Blue bat Kasparov}
   \V{["img/deepblue-kasparov", "tw", 0.8] | image}
 \end{frame}
 
-\begin{frame}{Du mythe à aujourd'hui}
-  \textbf{2011} : IBM-Watson
+\begin{frame}{2011 --- IBM Watson gagne à \textit{Jeopardy}}
   \V{["img/jeopardy-watson", "tw", 0.6] | image}
 \end{frame}
 
-\begin{frame}{Du mythe à aujourd'hui}
-  \textbf{2012} : Le ``neurone du chat'' dans un \textbf{CNN}
+\begin{frame}{2012 --- \frquote{Neurone du chat} dans un \textbf{CNN}}
   \V{["img/googlebrain", "tw", 0.6] | image}
 \end{frame}
 
-\begin{frame}{Du mythe à aujourd'hui}
-  \textbf{2016} : AlphaGo vs Lee Sedol
+\begin{frame}{2016 --- AlphaGo bat Lee Sedol}
   \V{["img/alphago-sedol", "tw", 0.6] | image}
 \end{frame}
 
-\begin{frame}{Du mythe à aujourd'hui}
-  \textbf{2019} : Pluribus vs Pro (Chris Ferguson, Darren Elias,...)
+\begin{frame}{2019 --- Pluribus bat des joueurs pros au poker}
   \V{["img/poker-bots", "tw", 0.6] | image}
 \end{frame}
 
