--- a/shared/latex/nn/gan/demo.tex
+++ b/shared/latex/nn/gan/demo.tex
@@ -1,4 +1,6 @@
 \begin{frame}{Démonstration}
-  \centering
-  \bluelink{https://poloclub.github.io/ganlab/}{Visualisation GAN}
+  \begin{itemize}
+    \item \bluelink{https://poloclub.github.io/ganlab/}{Visualisation GAN}
+    \item \bluelink{https://colab.research.google.com/drive/1tKSbN9jJnJ69zWgnFTZ21iY4_MVFBUcH\#forceEdit=true&sandboxMode=true}{DCGAN}
+  \end{itemize}
 \end{frame}
