--- a/shared/latex/supervised/cost-error-function.tex
+++ b/shared/latex/supervised/cost-error-function.tex
@@ -1,30 +1,30 @@
 \begin{frame}
-  \frametitle{Fonction de Coût/Erreur}
-  \begin{minipage}[l]{0.40\linewidth}
-  \underline{Erreur moyenne} :
-  \begin{center}
-    $\frac{1}{n}\sum_{i=[1..n]}\sqrt{( \hat{y_i} - y_i )^2}$
-    \newline
-  \end{center}
-  \underline{Critère des moindres carrés (MSE)} :
-  \begin{center}
-    $\frac{1}{n}\sum_{i=[1..n]}( \hat{y_i} - y_i )^2$
-  \end{center}
+  \frametitle{Fonction de coût / d'erreur}
+  \begin{minipage}[l]{0.5\textwidth}
+    \textbf{Erreur absolue moyenne}
+
+    \[
+      \frac{1}{n}\sum_{i=1}^n\lvert\hat{y_i} - y_i\rvert
+    \]
+    \textbf{Erreur quadratique moyenne}
+
+    \[
+      \frac{1}{n}\sum_{i=1}^n( \hat{y_i} - y_i )^2
+    \]
   \end{minipage}\hfill
-  \begin{minipage}[l]{0.59\linewidth}
-  \V{["img/regression-error", "th", 0.7] | image}
+  \begin{minipage}[l]{0.5\textwidth}
+    \V{["img/regression-error", "tw", 1] | image}
   \end{minipage}\hfill
 \end{frame}
 
-\begin{frame}
-  \frametitle{Fonction de Coût/Erreur}
+\begin{frame}{Choix usuel pour la régression}
   \begin{minipage}[l]{0.49\linewidth}
-  \begin{center}
-    $y = a.x+b$
+    \[
+      \hat{y} = ax+b
+    \]
     \V{["img/regression-nzmog", "tw", 1] | image}
-  \end{center}
   \end{minipage}\hfill
   \begin{minipage}[l]{0.49\linewidth}
-    $\boxed{E_\Omega = \frac{1}{2n}\sum_{i=[1..n]}( \hat{y_i} - y_i )^2}$ \\
+    $\boxed{E = \frac{1}{2n}\sum_{i=1}^n( \hat{y_i} - y_i )^2}$ \\
   \end{minipage}\hfill
 \end{frame}
