--- a/shared/latex/supervised/regression-lineaire.tex
+++ b/shared/latex/supervised/regression-lineaire.tex
@@ -1,13 +1,11 @@
 \begin{frame}{Définition du problème}
-  Soit $\{( x_i , y_i)\}_{i \in \mathbb{R}}$ un ensemble de données tel que $\forall i, x_i \in \mathbb{R}$ et $y_i \in \mathbb{R}$ \\
-  \newline
-  Trouver $\phi^*(x_i) = y_i^*$ telle que \\
-  \newline
-  $\forall i, y^*_i-y_i \rightarrow 0$ \\
-  sous la contrainte que $\phi^*$ soit une fonction linéaire (affine)
+  Soit $\{(x_i, y_i)\}_{i \in \mathbb{R}}$ un ensemble de données tel que $\forall i, x_i \in \mathbb{R}$ et $y_i \in \mathbb{R}$ \\
+
+  Trouver $f: x_i \mapsto \hat{y_i}$ telle que $\hat{y_i} = ax + b$
+
+  On souhaite minimiser l'erreur commise~: $\sum_i \hat{y_i} - y_i \rightarrow 0$
 \end{frame}
 
-\begin{frame}
-  \frametitle{Visualisation}
+\begin{frame}{Visualisation}
   \V{["img/regression-nzmog", "th", 0.7] | image}
 \end{frame}
