--- a/shared/latex/ml/evaluation.tex
+++ b/shared/latex/ml/evaluation.tex
@@ -11,7 +11,7 @@
   \begin{description}
   \item[Précision]
     \[
-    \frac{\text{vrais positifs}}{\text{vrais positifis + faux positifs}}
+    \frac{\text{vrais positifs}}{\text{vrais positifs + faux positifs}}
     \]
   \item[Rappel]
     \[
