--- a/shared/latex/supervised/regression-polynomiale.tex
+++ b/shared/latex/supervised/regression-polynomiale.tex
@@ -10,25 +10,28 @@
 \end{frame}
 
 \begin{frame}{Exemple de régressions polynômiales}
-  \begin{minipage}[l]{0.25\linewidth}
-    $Y=\underset{k \in [0..n]}{\sum}{a_k*X^k}$
-  \end{minipage}\hfill
-  \begin{minipage}[c]{0.74\linewidth}
-    \V{["img/regression-polynomiale-exemple-nzmog", "tw", 0.8] | image}
-  \end{minipage}\hfill
+  \begin{columns}
+    \begin{column}{0.25\tw}
+      \[
+        \hat{y}_i = \sum_{k = 0}^n a_kx_i^k
+      \]
+    \end{column}
+    \begin{column}{0.75\tw}
+      \V{["img/regression-polynomiale-exemple-nzmog", "tw", 0.8] | image}
+    \end{column}
+  \end{columns}
 \end{frame}
 
 \begin{frame}{Gradient et mise à jour}
-  $Y=\underset{k \in [0..n]}{\sum}{a_k.X^k}$ \\
-  $\;$ \\
-  $E_{\Omega} = \frac{1}{2n}\underset{i=[1..n]}{\sum}( \hat{Y_i} - Y_i )^2$ \\
-  $\;$ \\
-  $\frac{\partial{E_{\Omega}}}{\partial{a_k}} = \frac{1}{n}\underset{i=[1..n]}{\sum}(Y_i - \hat{Y_i}).X_i^k$ \\
-  $\;$ \\
-  $\;$ \\
-  \textbf{M.A.J :} \\
-  $\;$ \\
-  $a_k \leftarrow a_k - \gamma.\frac{\partial{E_{\Omega}}}{\partial{a_k}}$ \\
-  $\;$ \\
-  où $1 > \gamma > 0$ (pas d'apprentissage)
+  \begin{align*}
+    \hat{y}_i & = \sum_{k = 0}^n{a_kx_i^k} \\
+    E & = \frac{1}{2n}\sum_{i=1}^n( \hat{y_i} - y_i )^2 \\
+    \frac{\partial{E}}{\partial{a_k}} & = \frac{1}{n}\sum_{i=1}^n(\hat{y_i} - y_i)x_i^k
+  \end{align*}
+
+  Mise à jour, avec $1 > \gamma > 0$ (pas d'apprentissage)~:
+
+  \[
+    a_k \leftarrow a_k - \gamma\frac{\partial{E}}{\partial{a_k}}
+  \]
 \end{frame}
